//生成命令  protoc --proto_path=:. --micro_out=. --go_out=. proto/*.proto
//windows    D:\probuf\bin\protoc.exe --plugin==%GOPATH%\bin\protoc-gen-go.exe   --micro_out=. --go_out=. ./socketMessage.proto

syntax = "proto3";

package go.micro.socketMessageservice;

message PushSocketMessageToUserParam {
    string content = 1;
    string receiverId = 2;
}

message PushSocketMessageToUserResponse {
    string result = 5;
}

// 服务接口
service PushSocketMessageToUserService {
    rpc PushMessageSocketToUser(PushSocketMessageToUserParam) returns (PushSocketMessageToUserResponse) {}
}